# serializer version: 1
# name: test_calc_eq_matrix_b[1x1]
  tuple(
    array([0, 0, 0, 2, 2, 4, 1, 1, 1, 3, 3, 5, 2, 4, 6, 4, 6, 6, 3, 5, 7, 5,
         7, 7], dtype=int32),
    array([0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3,
         4, 5], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[1x1].1
  2
# ---
# name: test_calc_eq_matrix_b[1x1].2
  tuple(
    8,
    6,
  )
# ---
# name: test_calc_eq_matrix_b[2x2]
  tuple(
    array([ 0,  0,  0,  0,  2,  2,  2,  2,  4,  4,  6,  6,  6,  8,  8,  8,  8,
         10, 10, 10, 12, 14,  1,  1,  1,  1,  3,  3,  3,  3,  5,  5,  7,  7,
          7,  9,  9,  9,  9, 11, 11, 11, 13, 15,  2,  6,  8, 10,  4,  6,  8,
         10,  8, 10,  8, 12, 14, 10, 12, 14, 16, 12, 14, 16, 14, 16,  3,  7,
          9, 11,  5,  7,  9, 11,  9, 11,  9, 13, 15, 11, 13, 15, 17, 13, 15,
         17, 15, 17], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,
          7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,
          2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
         19, 20, 21], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[2x2].1
  2
# ---
# name: test_calc_eq_matrix_b[2x2].2
  tuple(
    18,
    22,
  )
# ---
# name: test_calc_eq_matrix_b[3x6]
  tuple(
    array([ 0,  0,  0,  2,  2,  2,  2,  4,  4,  4,  4,  6,  6,  8,  8,  8, 10,
         10, 10, 10, 12, 12, 12, 12, 14, 14, 16, 16, 16, 18, 18, 18, 18, 20,
         20, 20, 20, 22, 22, 24, 24, 24, 26, 26, 26, 26, 28, 28, 28, 28, 30,
         30, 32, 32, 32, 34, 34, 34, 34, 36, 36, 36, 36, 38, 38, 40, 40, 40,
         42, 42, 42, 42, 44, 44, 44, 44, 46, 46, 48, 50, 52,  1,  1,  1,  3,
          3,  3,  3,  5,  5,  5,  5,  7,  7,  9,  9,  9, 11, 11, 11, 11, 13,
         13, 13, 13, 15, 15, 17, 17, 17, 19, 19, 19, 19, 21, 21, 21, 21, 23,
         23, 25, 25, 25, 27, 27, 27, 27, 29, 29, 29, 29, 31, 31, 33, 33, 33,
         35, 35, 35, 35, 37, 37, 37, 37, 39, 39, 41, 41, 41, 43, 43, 43, 43,
         45, 45, 45, 45, 47, 47, 49, 51, 53,  2,  8, 10,  4,  8, 10, 12,  6,
         10, 12, 14, 12, 14, 10, 16, 18, 12, 16, 18, 20, 14, 18, 20, 22, 20,
         22, 18, 24, 26, 20, 24, 26, 28, 22, 26, 28, 30, 28, 30, 26, 32, 34,
         28, 32, 34, 36, 30, 34, 36, 38, 36, 38, 34, 40, 42, 36, 40, 42, 44,
         38, 42, 44, 46, 44, 46, 42, 48, 50, 44, 48, 50, 52, 46, 50, 52, 54,
         52, 54, 50, 52, 54,  3,  9, 11,  5,  9, 11, 13,  7, 11, 13, 15, 13,
         15, 11, 17, 19, 13, 17, 19, 21, 15, 19, 21, 23, 21, 23, 19, 25, 27,
         21, 25, 27, 29, 23, 27, 29, 31, 29, 31, 27, 33, 35, 29, 33, 35, 37,
         31, 35, 37, 39, 37, 39, 35, 41, 43, 37, 41, 43, 45, 39, 43, 45, 47,
         45, 47, 43, 49, 51, 45, 49, 51, 53, 47, 51, 53, 55, 53, 55, 51, 53,
         55], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,
         34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
         51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,
         68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,
          4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
         21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37,
         38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54,
         55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,
         72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,
          8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24,
         25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41,
         42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58,
         59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75,
         76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
         29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45,
         46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62,
         63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
         80], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[3x6].1
  2
# ---
# name: test_calc_eq_matrix_b[3x6].2
  tuple(
    56,
    81,
  )
# ---
# name: test_testname[1x1]
  tuple(
    np.float64(150.0),
    array([ 0.        ,  0.        , 70.71067812,  0.        ,  0.        ,
         50.        ]),
  )
# ---
# name: test_testname[1x1].1
  '''
         problem_name  width  height  n_load_points  n_patterns_total  n_patterns_active  load_large  load_small  iterations  final_volume  n_members_final  n_nodes  n_ground_structure primal_method                  notes
  0  short cantilever      1       1              1                 2                  1          50           5           2         150.0                6        4                   6   load_factor  short cantliever test
  '''
# ---
# name: test_testname[2x2]
  tuple(
    np.float64(150.0),
    array([ 0.        ,  0.        , 70.71067812,  0.        ,  0.        ,
         50.        ]),
  )
# ---
# name: test_testname[2x2].1
  '''
         problem_name  width  height  n_load_points  n_patterns_total  n_patterns_active  load_large  load_small  iterations  final_volume  n_members_final  n_nodes  n_ground_structure primal_method                  notes
  0  short cantilever      1       1              1                 2                  1          50           5           2         150.0                6        4                   6   load_factor  short cantliever test
  '''
# ---
# name: test_testname[parallel forces]
  tuple(
    np.float64(1500.0),
    array([250.        ,   0.        ,  70.71067812, 150.        ,
          70.71067812,   0.        ,  70.71067812,  50.        ,
          70.71067812,   0.        ,  70.71067812,  70.71067812,
           0.        , 250.        , 150.        ,  50.        ]),
    None,
  )
# ---
# name: test_trussopt[parallel forces].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces         None     3      1             2                4                 1         50          5          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[short cantilever]
  tuple(
    np.float64(300.0),
    array([ 0.        ,  0.        , 35.35533906,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        , 35.35533906,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        , 35.35533906,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         35.35533906,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         35.35533906,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        , 35.35533906,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
          0.        ]),
    None,
  )
# ---
# name: test_trussopt[short cantilever].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever         None     3      6             1                2                 1         50          5          2        300.0              81      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[spanning example]
  tuple(
    np.float64(533.20722988),
    array([0.00000000e+00, 3.75000000e+00, 3.33139108e+00, 1.99458382e+00,
         1.66169021e+00, 0.00000000e+00, 0.00000000e+00, 4.60776420e-01,
         0.00000000e+00, 2.18247623e+00, 5.23146106e+00, 6.51674900e-01,
         8.62966610e-01, 0.00000000e+00, 1.78072236e+00, 3.19225230e+00,
         4.35467058e+00, 4.26083350e-01, 0.00000000e+00, 0.00000000e+00,
         2.57150700e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 4.60776440e-01,
         0.00000000e+00, 0.00000000e+00, 1.66168996e+00, 2.12879559e+00,
         3.29179375e+00, 3.75000000e+00, 8.62966560e-01, 6.51675210e-01,
         5.42979415e+00, 2.18386413e+00, 0.00000000e+00, 0.00000000e+00,
         4.26083360e-01, 3.99886046e+00, 3.24334207e+00, 1.79118645e+00,
         0.00000000e+00, 2.65690500e-02, 0.00000000e+00, 3.75000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         2.17427172e+00, 1.16836780e-01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.88251780e-01, 2.03270700e-01, 0.00000000e+00,
         3.00641770e-01, 2.92841910e-01, 1.24249840e-01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.99458382e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.66169021e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         4.29319600e-01, 0.00000000e+00, 1.36892930e-01, 0.00000000e+00,
         1.11670600e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 6.78125300e-02, 2.15626200e-01, 0.00000000e+00,
         1.58955660e-01, 0.00000000e+00, 1.39809410e-01, 8.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         6.78125600e-02, 3.56230400e-02, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 3.56230100e-02, 1.78115000e-02, 1.78115200e-02,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         2.00000000e-08, 1.39809440e-01, 0.00000000e+00, 1.58955660e-01,
         0.00000000e+00, 2.15626200e-01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         4.29319650e-01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.11670400e-02, 0.00000000e+00, 1.36892930e-01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.66168996e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 2.12879559e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 1.18346280e-01, 2.15937882e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.95394760e-01,
         1.88269680e-01, 1.24843500e-01, 2.80969560e-01, 2.92296990e-01,
         0.00000000e+00, 3.75000000e+00, 0.00000000e+00, 3.75000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 2.18247624e+00, 2.19867200e-02,
         0.00000000e+00, 8.33403700e-02, 1.99191316e+00, 5.99806500e-02,
         4.01977400e-02, 0.00000000e+00, 1.63461300e-02, 0.00000000e+00,
         1.45232400e-02, 1.99246600e-02, 2.26618650e-01, 5.68055530e-01,
         1.64666600e-02, 3.14543280e-01, 3.32798361e+00, 9.89702130e-01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.99458382e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.30416700e-02, 0.00000000e+00, 1.45810330e-01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         5.11211790e-01, 1.46779950e-01, 6.73826130e-01, 1.63457670e-01,
         6.81870000e-02, 1.56803776e+00, 1.17199000e-02, 0.00000000e+00,
         2.80821700e-02, 1.19088580e-01, 3.95659300e-02, 1.12650000e-02,
         9.75332500e-02, 1.25118440e-01, 0.00000000e+00, 1.78115500e-02,
         0.00000000e+00, 7.26188870e-01, 0.00000000e+00, 6.49991500e-02,
         1.39468690e-01, 2.23196870e-01, 2.37102200e-02, 4.72473440e-01,
         5.01971500e-02, 0.00000000e+00, 0.00000000e+00, 2.16103700e-02,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 2.80821500e-02, 5.01970800e-02,
         4.72473500e-01, 2.37102300e-02, 2.23196840e-01, 1.39468660e-01,
         6.49991000e-02, 0.00000000e+00, 0.00000000e+00, 2.16103600e-02,
         0.00000000e+00, 0.00000000e+00, 1.46779950e-01, 1.25118470e-01,
         9.75332800e-02, 1.12650200e-02, 3.95659400e-02, 1.19088590e-01,
         0.00000000e+00, 7.26188780e-01, 0.00000000e+00, 0.00000000e+00,
         1.78115600e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.17198900e-02, 1.56803752e+00, 6.81870000e-02, 1.63457640e-01,
         6.73826070e-01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.45810360e-01, 0.00000000e+00, 1.30416700e-02,
         0.00000000e+00, 0.00000000e+00, 5.11212070e-01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         2.12879559e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 2.32161800e-02, 5.60363200e-01, 2.18600260e-01,
         1.99917100e-02, 1.46452200e-02, 1.00750257e+00, 3.52192401e+00,
         3.20214280e-01, 1.68972700e-02, 0.00000000e+00, 3.97625200e-02,
         5.80065300e-02, 1.97830642e+00, 8.34355200e-02, 0.00000000e+00,
         1.63888700e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 2.18386413e+00,
         0.00000000e+00, 3.75000000e+00, 0.00000000e+00, 3.75000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 5.80853400e-02, 0.00000000e+00, 1.26252365e+00,
         0.00000000e+00, 1.04331986e+00, 2.79863600e-02, 1.61232600e-02,
         2.78452700e-02, 2.55901500e-02, 3.91710200e-02, 0.00000000e+00,
         1.94626007e+00, 4.08418300e-02, 1.74626400e-02, 3.75162200e-02,
         1.15747390e-01, 2.34773000e-02, 0.00000000e+00, 1.03015911e+00,
         0.00000000e+00, 2.03600122e+00, 2.95301800e-02, 1.04994581e+00,
         1.13437500e-02, 6.23824880e-01, 4.34515930e-01, 0.00000000e+00,
         5.38069330e-01, 2.27524100e-02, 5.07604413e+00, 1.95625080e-01,
         6.45005320e-01, 0.00000000e+00, 5.49755940e-01, 0.00000000e+00,
         1.83487727e+00, 1.21237840e-01, 4.11008180e-01, 2.78807500e-02,
         0.00000000e+00, 0.00000000e+00, 2.04081000e-01, 4.57398400e-02,
         1.10350480e-01, 0.00000000e+00, 7.56495020e-01, 5.37549600e-01,
         1.20034083e+00, 0.00000000e+00, 5.45120310e-01, 6.19593300e-02,
         1.59168888e+00, 0.00000000e+00, 0.00000000e+00, 5.37549600e-01,
         1.06166630e-01, 0.00000000e+00, 3.35077600e-02, 4.10266700e-02,
         3.35077600e-02, 0.00000000e+00, 1.06166650e-01, 2.78807400e-02,
         0.00000000e+00, 0.00000000e+00, 1.59168864e+00, 6.19593400e-02,
         5.45120280e-01, 0.00000000e+00, 1.20034075e+00, 0.00000000e+00,
         1.95625120e-01, 7.56495110e-01, 0.00000000e+00, 1.10350510e-01,
         4.57398600e-02, 2.04081020e-01, 0.00000000e+00, 0.00000000e+00,
         1.13437500e-02, 4.11008130e-01, 1.21237830e-01, 1.96908911e+00,
         0.00000000e+00, 5.49755940e-01, 0.00000000e+00, 6.45005350e-01,
         1.13622640e-01, 4.87123289e+00, 2.21002200e-02, 3.67514990e-01,
         0.00000000e+00, 4.33113530e-01, 6.23856200e-01, 2.83304100e-02,
         1.04394798e+00, 2.93206500e-02, 2.08009285e+00, 0.00000000e+00,
         1.03085847e+00, 0.00000000e+00, 2.53457000e-02, 5.93166000e-02,
         3.51382600e-02, 1.72016300e-02, 3.93615900e-02, 1.93516009e+00,
         0.00000000e+00, 3.81701300e-02, 0.00000000e+00, 2.67620600e-02,
         1.60298600e-02, 2.74888100e-02, 1.05018200e+00, 0.00000000e+00,
         1.26867594e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 3.75000000e+00,
         0.00000000e+00, 0.00000000e+00, 4.23231120e-01, 4.23231120e-01,
         1.98912704e+00, 1.98912704e+00, 5.29178385e+00, 5.41040435e+00,
         1.08666649e+01, 1.08666649e+01, 5.47680862e+00, 5.35853390e+00,
         1.98773977e+00, 1.98773977e+00, 4.20027260e-01, 4.20027270e-01,
         0.00000000e+00, 0.00000000e+00]),
    None,
  )
# ---
# name: test_trussopt[spanning example].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example         None    18      4            10             1024                16       3.75      0.204         18    533.20723             726      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[square cantilever]
  tuple(
    np.float64(2070.3703704),
    array([1.66666667e+01, 0.00000000e+00, 1.35914871e+01, 1.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         4.90656694e+00, 6.23282964e+01, 0.00000000e+00, 1.37258505e+01,
         0.00000000e+00, 0.00000000e+00, 1.66666667e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 1.66666667e+01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.66666667e+01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.66666667e+01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.66666667e+01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 1.66666667e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.66666667e+01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 2.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 5.27046276e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 1.35914871e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 2.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         4.00000000e-08, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.35914871e+01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 4.90656694e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         3.00000000e-08, 0.00000000e+00, 0.00000000e+00, 6.21129994e+01,
         0.00000000e+00, 5.17608298e+00, 2.20000000e-07, 5.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 4.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.35914871e+01,
         0.00000000e+00, 0.00000000e+00, 3.00000000e-08, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         3.32900774e+00, 0.00000000e+00, 1.33160310e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 6.67823071e+01, 0.00000000e+00, 3.53553391e+01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.00000000e-08, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         4.00000000e-08, 0.00000000e+00, 3.00000000e-08, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 9.22156397e+00, 0.00000000e+00,
         9.00838768e+00, 3.10564996e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         3.60335507e+01, 0.00000000e+00, 1.17851130e+01, 3.23390152e+01,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 3.53553391e+01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 1.00000000e-08, 0.00000000e+00,
         3.00000000e-08, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         9.22156418e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 3.71425339e+01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 3.72677996e+01, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 3.00000000e-08,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 9.22156423e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 3.23390152e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 3.73969778e+01, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         9.22156423e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         1.00000000e-08, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,
         0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00]),
    None,
  )
# ---
# name: test_trussopt[square cantilever].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever         None     8      8             2                4                 1         50          5          8   2070.37037             376      81               2040   load_factor  square cantliever test
  '''
# ---
